examples/test/testpolicy108.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy108
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key0: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value13
          key36: value27
          key46: value30
      podSelector:
        matchLabels:
          key7: value24
          key42: value39
